added some error checking disabled the Refresh button while refresh is in progress

--- a/Weather/Weather/MainPage.xaml
+++ b/Weather/Weather/MainPage.xaml
@@ -44,7 +44,8 @@
                 </StackLayout>
                 
                 <Button Text="Refresh"
-                        Command="{Binding Refresh}" />
+                        Command="{Binding Refresh}"
+                        IsEnabled="{Binding RefreshIsEnabled}"/>
                 
             </StackLayout>
         </Frame>
