--- a/Weather/Weather/MainPage.xaml
+++ b/Weather/Weather/MainPage.xaml
@@ -11,6 +11,8 @@
         <local:MainViewModel/>
     </ContentPage.BindingContext>
 
+    <ContentPage.Content>
+    
     <RefreshView IsRefreshing="{Binding IsRefreshing}" 
                  Command="{Binding RefreshCommand}">
         <ScrollView Padding="4">
@@ -77,8 +79,11 @@
                 <BoxView Color="Black" HeightRequest="2" />
                 <Label Text="{Binding Updated}"/>
                 <Label Text="{Binding Requested}"/>
+                <Button Text="Select Location"
+                        Clicked="Button_Clicked"/>
             </StackLayout>
         </ScrollView>
     </RefreshView>
-
+        
+    </ContentPage.Content>
 </ContentPage>
