--- a/Weather/Weather/MainPage.xaml
+++ b/Weather/Weather/MainPage.xaml
@@ -15,7 +15,7 @@
     
     <RefreshView IsRefreshing="{Binding IsRefreshing}" 
                  Command="{Binding RefreshCommand}">
-        <ScrollView Padding="4">
+        <ScrollView Padding="8">
             <StackLayout>
                 <BoxView Color="Black" HeightRequest="2" />
                 <Label Text="Current Conditions"
@@ -52,10 +52,14 @@
                 <Label Text="Forecast"
                        FontSize="Medium" FontAttributes="Bold"/>
                 <BoxView Color="Black" HeightRequest="2" />
-                <CollectionView ItemsLayout="HorizontalList" ItemsSource="{Binding ForecastCells}" HeightRequest="235">
+                <CollectionView ItemsLayout="HorizontalList"
+                                ItemsSource="{Binding ForecastCells}"
+                                SelectionMode="Single"
+                                SelectionChanged="CollectionView_SelectionChanged"
+                                HeightRequest="235">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <StackLayout BackgroundColor="{Binding BackgroundColor}" Padding="4" Grid.Column="0" >
+                            <StackLayout BackgroundColor="{Binding BackgroundColor}" Padding="4">
                                 <Label Text="{Binding Label}"
                                    FontAttributes="Bold"
                                    HorizontalOptions="Center"/>
