--- a/Weather/Weather/MapPage.xaml
+++ b/Weather/Weather/MapPage.xaml
@@ -6,7 +6,8 @@
              mc:Ignorable="d"
              xmlns:local="clr-namespace:Weather"
              x:Class="Weather.MapPage"
-             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps">
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+             Title="Set Location">
 
     <ContentPage.BindingContext>
         <local:MapViewModel/>
