--- a/Weather/Weather/Pages/Details/DetailPage.xaml
+++ b/Weather/Weather/Pages/Details/DetailPage.xaml
@@ -4,10 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             xmlns:local="clr-namespace:Weather"
              x:Class="Weather.DetailPage"
              Title="Forecast Details">
     <ContentPage.Content>
-        <ScrollView>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+ 
+            <ScrollView>
             <StackLayout BackgroundColor="{Binding BackgroundColor}" Padding="8">
                 <Label Text="{Binding Label}"
                    FontAttributes="Bold"
@@ -33,5 +40,8 @@
                    FontSize="Medium"/>
             </StackLayout>
         </ScrollView>
+
+            <local:AdMobView Grid.Row="1" HeightRequest="50"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
