added master/detail as main view

--- a/Weather/Weather/Views/CurrentConditionsPage.xaml
+++ b/Weather/Weather/Views/CurrentConditionsPage.xaml
@@ -49,7 +49,7 @@
             </StackLayout>
         </ScrollView>
 
-            <local:AdMobView Grid.Row="1" HeightRequest="50"/>
+            <local:AdMobView Grid.Row="1"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
